--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format:check": "prettier --check \"src/**/*.{js,ts,vue,json}\""
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vicons/ionicons5": "^0.12.0",
     "async-validator": "^4.2.5",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "grapheme-splitter": "^1.0.4",
     "pinia": "^2.1.7",
