--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_APP_TITLE=LessURL
-VITE_API_BASE_URL=http://localhost:8080
-VITE_MOCK_SERVER_ENABLE=false
+#VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=/api/v1
+VITE_MOCK_SERVER_ENABLE=true
 VITE_SECRET_KEY=your-secret-key
