--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "format:check": "prettier --check \"src/**/*.{js,ts,vue,json}\""
   },
   "dependencies": {
+    "@faker-js/faker": "^9.1.0",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/mockjs": "^1.0.10",
     "@vicons/ionicons5": "^0.12.0",
     "async-validator": "^4.2.5",
     "axios": "^1.7.7",
@@ -24,6 +26,7 @@
     "echarts": "^5.5.1",
     "grapheme-splitter": "^1.0.4",
     "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.1",
     "vfonts": "^0.0.3",
@@ -41,7 +44,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.23.0",
-    "mockjs": "^1.1.0",
     "naive-ui": "^2.40.1",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.3.3",
