--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
   ],
   "compilerOptions": {
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@mocks/*": ["./mocks/*"]
+    }
   }
 }
