--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_TITLE=LessURL
-#VITE_API_BASE_URL=http://localhost:8080
-VITE_API_BASE_URL=/api/v1
+# 默认启用 mock server
 VITE_MOCK_SERVER_ENABLE=true
+# /api/v1 是 mock server 路径，如果使用真实后台服务，请修改为后台服务地址
+VITE_API_BASE_URL=/api/v1
 VITE_SECRET_KEY=your-secret-key
