feat: provider default login user

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_MOCK_SERVER_ENABLE=true
 # /api/v1 是 mock server 路径，如果使用真实后台服务，请修改为后台服务地址
 VITE_API_BASE_URL=/api/v1
 VITE_SECRET_KEY=your-secret-key
+VITE_SHORT_URL_PREFIX=https://lu.procharse.top/s/
