--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/mockjs": "^1.0.10",
+    "@vercel/speed-insights": "^1.0.14",
     "@vicons/ionicons5": "^0.12.0",
     "async-validator": "^4.2.5",
     "axios": "^1.7.7",
