--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mockjs": "^1.0.10",
     "@vercel/speed-insights": "^1.0.14",
     "@vicons/ionicons5": "^0.12.0",
+    "@vueuse/core": "^11.2.0",
     "async-validator": "^4.2.5",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
