feat: show notification when mock enable

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VITE_MOCK_SERVER_ENABLE=true
 # /api/v1 是 mock server 路径，如果使用真实后台服务，请修改为后台服务地址
 VITE_API_BASE_URL=/api/v1
 VITE_SECRET_KEY=your-secret-key
-VITE_SHORT_URL_PREFIX=https://lu.procharse.top/s/
+# Mock Server 使用的短链前缀
+VITE_MOCK_URL_PREFIX=https://lu.procharse.top/s/
