--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_MOCK_SERVER_ENABLE=true
 VITE_API_BASE_URL=/api/v1
 VITE_SECRET_KEY=your-secret-key
 # Mock Server 使用的短链前缀
-VITE_MOCK_URL_PREFIX=https://lu.procharse.top/s/
+VITE_MOCK_URL_DOMAIN=http://localhost:8080/
